--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,7 +14,10 @@ a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
-
+ul {
+  padding: 10px;
+  background: black;
+}
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
