--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -33,6 +33,8 @@ li {
 }
   color:white;
 }
+
+.first{url("http://www.mulrannyparkhotel.ie/uploads/images/headerimages/P1030253.jpg")}
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
