--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -75,7 +75,7 @@ li {
 
 .page-header {
   color: #fff;
-  text-align: center;
+  text-align: left;
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
