--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -75,8 +75,9 @@ li {
 
 .page-header {
   color: #fff;
-  text-align: left;
+  text-align: center;
   background-color: #159957;
+  background: url("http://www.signalbrands.com/wp-content/uploads/2015/10/1680x1050-dodger-blue-solid-color-background.jpg");
   background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
