--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,10 +7,13 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #606c71; }
+  color: #606c71;
+  text-align: justify;
+  
+}
   
 div{
-  height: 200px;
+  height: 400px;
   background-size: cover;
   position: relative;
   margin: 40px 0 0 0;
