--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -42,10 +42,10 @@ li {
   color:white;
 }
 
-.first{background: url("http://www.mulrannyparkhotel.ie/uploads/images/headerimages/P1030253.jpg")}
-.second{background: url("http://static.thousandwonders.net/Ring.of.Kerry.original.28132.jpg");}
-.third{background: url("http://www.galwaybustours.ie/uploads/images/Gallery/content/tour1_gallery/Cliffs-of-Moher.jpg");}
-.fourth{background: url("https://upload.wikimedia.org/wikipedia/commons/d/d5/Giant's_Causeway_(14).JPG");}
+.first{background-image: url("http://www.mulrannyparkhotel.ie/uploads/images/headerimages/P1030253.jpg")}
+.second{background-image: url("http://static.thousandwonders.net/Ring.of.Kerry.original.28132.jpg");}
+.third{background-image: url("http://www.galwaybustours.ie/uploads/images/Gallery/content/tour1_gallery/Cliffs-of-Moher.jpg");}
+.fourth{background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d5/Giant's_Causeway_(14).JPG");}
 
 .btn {
   display: inline-block;
