--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,12 +3,14 @@
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
 body {
   padding: 0;
-  margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71;
   text-align: justify;
+   margin: 0 auto;
+  max-width: 600px;
+  background: #232323;
   
 }
 
