--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -24,7 +24,7 @@ div{
   height: 400px;
   background-size: cover;
   position: relative;
-  margin: 40px 0 0 0;
+  margin: 20px 12px 0 12px;
   padding: 10px;
   border-radius: 12px;
   text-align: justify;
