--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box; }
-{
+head {
   <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
 }
 body {
@@ -110,7 +110,7 @@ li {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #15995;
+  background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
