--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -17,6 +17,16 @@ body {
 p{
   color: black;
   font-size:12px;
+  position absolut background: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
+  background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
+  background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
+  bottom: 0;
+  margin: 0;
+  height: 30px;
+  transition:height .5s;
+  -webkit-transition: height .5s;
+  -moz-transition: height .5s;
+  
 }
 p.hover{
   text-decoration: bold;
