--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -49,7 +49,7 @@ a {
     text-decoration: underline; }
 ul {
   padding: 20px;
-  background: black;
+  background: #f8f8ff ;
   position: justify;
 }
 li {
