--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,18 +8,15 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #606c71;
+  color: black;
   text-align: justify;
-   margin: 0 auto;
+  margin: 0 auto;
   max-width: 600px;
 }
 
 p{
   color: black;
   font-size:12px;
-  position absolut background: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
-  background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
-  background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
   bottom: 0;
   margin: 0;
   height: 30px;
@@ -39,6 +36,10 @@ p.hover{
   text-decoration: bold;
 }
   
+  img{
+    height:5px;
+    width:5px;
+  }
 div{
   height: 400px;
   background-size: cover;
@@ -56,8 +57,8 @@ a {
     text-decoration: underline; }
 ul {
   padding: 20px;
-  background: #f8f8ff ;
-  position: justify;
+  background:;
+  position: cover;
 }
 li {
   display: inline;
