--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,6 +3,9 @@
 h1 {
   <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
 }
+h1{
+  font-family: 'Marcellus SC', cursive;
+}
 body {
   padding: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
