--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,6 +5,9 @@ h1 {
 }
 h1{
   font-family: 'Marcellus SC', cursive;
+  font-size: 75px;
+  text-align: center;
+  margin: 60px 0 0 0;
 }
 body {
   padding: 0;
