--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -50,7 +50,7 @@ p.hover{
 div{
   height: 400px;
   background-size: cover;
-  position: justify;
+  position: relative;
   margin: 20px 12px 0 12px;
   padding: 10px;
   border-radius: 12px;
