--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -322,3 +322,27 @@ li {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+
+@media(max-width: 500px) {
+  h1 {
+    font-size: 50px;
+    margin-top: 20px;
+    line-height:40px;
+  }
+  h2{
+    font-size:20px;
+    margin: 20px 0px 30px 0px;
+  }
+  
+  div{
+    margin: 20px 12px 0px 12px;
+  }
+  p{
+    font-size:20px;
+    line-height: 24px;
+    
+  }
+ small{
+    font-size: 16px;
+    }
+}
