--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,7 +7,7 @@ h1{
   font-family: 'Marcellus SC', cursive;
   font-size: 75px;
   text-align: center;
-  margin: 60px 0 0 0;
+  margin: 0 auto;
 }
 body {
   padding: 0;
@@ -25,7 +25,7 @@ p{
   color: black;
   font-size:12px;
   bottom: 0;
-  margin: 0;
+  margin: 0 auto;
   height: 30px;
   transition:height .5s;
   -webkit-transition: height .5s;
@@ -52,7 +52,7 @@ div{
   height: 400px;
   background-size: cover;
   position: relative;
-  margin: 20px 12px 0 12px;
+  margin: 0 auto;
   padding: 10px;
   border-radius: 12px;
   text-align: justify;
