--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,6 +3,10 @@
 h1 {
   <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
 }
+
+h5{
+  color: white;
+}
 h1{
   font-family: 'Marcellus SC', cursive;
   font-size: 75px;
