--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,7 +11,7 @@ h1{
   font-family: 'Marcellus SC', cursive;
   font-size: 75px;
   text-align: center;
-  margin: 0 auto;
+   margin: 60px 0 0 0
 }
 form{
   position: center;
@@ -31,7 +31,7 @@ body {
   line-height: 1.5;
   color: black;
   text-align: justify;
-  margin: 0 auto;
+  margin: 60px 0 0 0;
   max-width: 600px;
   background:#4D4C4C;
 }
