--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -31,7 +31,7 @@ body {
   line-height: 1.5;
   color: black;
   text-align: justify;
-  margin: 60px 0 0 0;
+  margin: 60px 0 0 60px;
   max-width: 600px;
   background:#4D4C4C;
 }
