--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,7 +11,7 @@ h1{
   font-family: 'Marcellus SC', cursive;
   font-size: 75px;
   text-align: center;
-   margin: 60px 0 0 0
+   margin: 60px 0 0 0;
 }
 form{
   position: center;
