--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -6,6 +6,8 @@ h1 {
 
 h5{
   color: white;
+  text-align: center;
+  margin: 0px 0 70px 0;
 }
 h1{
   font-family: 'Marcellus SC', cursive;
@@ -25,6 +27,7 @@ table {
 }
 
 body {
+ 
   padding: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -37,11 +40,19 @@ body {
 }
 
 p{
-  color: black;
+   background: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
+  background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
+  background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
+ color: rgba(255,255,255,1);
+ background: black;
+  padding: 10px;
+  line-height:28px;
+  text-align: justify;
+  position absolute;
   font-size:12px;
   bottom: 0;
-  margin: 0 auto;
-  height: 30px;
+  margin: 0;
+  height: 50px;
   transition:height .5s;
   -webkit-transition: height .5s;
   -moz-transition: height .5s;
