--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,6 +28,7 @@ table {
 }
 
 body {
+  width: 100%;
  
   padding: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
