--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,7 +9,7 @@ h5{
   color: white;
   text-align: center;
   margin: 0px 0 70px 0;
-  font-size:12px;
+  font-size:14px;
   
 }
 h1{
@@ -48,7 +48,7 @@ p{
   background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
   background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
  color: rgba(255,255,255,1);
- background: black;
+ background: #00FFFFFF;
   padding: 10px;
   line-height:28px;
   text-align: justify;
