--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,7 +19,7 @@ h1{
    margin: 60px 0 0 0;
 }
 form{
-  position: center;
+  position: absolute;
   color: black;
 }
 
@@ -55,7 +55,7 @@ p{
   position absolute;
   font-size:12px;
   bottom: 0;
-  margin: 0;
+  margin:  25px 50px 75px 100px;
   height: 50px;
   transition:height .5s;
   -webkit-transition: height .5s;
