--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -38,7 +38,7 @@ body {
   line-height: 1.5;
   color: black;
   text-align: justify;
-  margin: 0 auto;
+  margin:  25px 50px 75px 100px;
   max-width: 800px;
   background:#4D4C4C;
 }
