--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -39,7 +39,7 @@ body {
   line-height: 1.5;
   color: black;
   text-align: justify;
-  margin: auto 0;
+  margin: 0;
   max-width: 800px;
   background:#4D4C4C;
 }
@@ -56,7 +56,7 @@ p{
   position: absolute;
   font-size:12px;
   bottom: 0;
-  margin:   200px 50px 0px 100px;
+  margin: 25px 50px 75px 100px;
   height: 50px;
   transition:height .5s;
   -webkit-transition: height .5s;
