--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -39,7 +39,7 @@ body {
   line-height: 1.5;
   color: black;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
   max-width: 800px;
   background:#4D4C4C;
 }
