--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,7 +53,7 @@ p{
   padding: 10px;
   line-height:28px;
   text-align: justify;
-  position: justify;
+  position: relative;
   font-size:12px;
   bottom: 0;
   margin: 200px 0px 0px 100px;
