--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,7 +8,7 @@ h1 {
 h5{
   color: white;
   text-align: center;
-  margin: 0px 0 70px 0;
+  margin: 20px 0 10px 0;
   font-size:14px;
   
 }
@@ -39,7 +39,7 @@ body {
   line-height: 1.5;
   color: black;
   text-align: center;
-  margin: center;
+  margin:0 auto;
   max-width: 900px;
   background:#4D4C4C;
 }
